--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.android.support:percent:28.0.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.android.support:design:28.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
