--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,13 @@ android {
 dependencies {
 
 
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-        implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.6'
 //    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     //    implementation 'com.github.bumptech.glide:glide:4.4.0'
