--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,15 @@
     package="com.edu.fragmentlayout">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <!--为APP分配更多独立的内存，加大内存-->
+    <!--android:largeHeap="true"-->
+    <!--获取网络权限配置-->
+    <!--android:networkSecurityConfig="@xml/network-->
     <application
         android:name=".Activity.AppApplication"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,10 +26,10 @@
         <activity android:name=".Activity.FengjingActivity" />
         <activity android:name=".Activity.GouWuCheActivity" />
         <activity android:name=".Activity.GouWuche_itemActivity" />
+        <!--动画-->
         <activity android:name=".Animator.Loding">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
