--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
 
-
+    implementation 'com.youth.banner:banner:1.4.9'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.litepal.android:core:1.6.1'
 //    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     //    implementation 'com.github.bumptech.glide:glide:4.4.0'
